--- a/extension/popup.css
+++ b/extension/popup.css
@@ -2,26 +2,7 @@ body {
     min-width: 150px;
 }
 
-.option a {
-    text-decoration: none;
-    color: #000;
-    border: 1px solid #000;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 5px;
-}
-
-.product-tracking,
-.options {
-    display: flex;
-    justify-content: center;
-}
-
-.track {
-    border: 1px solid #fff;
-    background-color: #000;
-    color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    cursor: pointer;
+#start-script,
+#stop-script {
+    display: none;
 }
