--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,7 +1,48 @@
-body {
-    width: 350px;
+/* Reset */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-/* .home {
-    display: none;
-} */
+img {
+    display: block;
+}
+
+body {
+    width: 350px;
+    background-color: white;
+}
+
+.container,
+.home,
+.login-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    justify-content: center;
+    align-items: center;
+}
+
+.image-wrapper {
+    width: 100%;
+    height: auto;
+}
+
+.image-wrapper img {
+    width: 100%;
+    height: 100%;
+}
+
+.heading {
+    padding-top: 0.5rem;
+}
+
+.home,
+.login-form {
+    padding: 0.5rem;
+}
