--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,48 +1,161 @@
 /* Reset */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+/* global css */
+
+html {
+    font: 16px/1.5 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    box-sizing: inherit;
 }
 
 img {
     display: block;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+}
+
+a:hover {
+    color: #F08A5D;
+}
+
 body {
-    width: 350px;
-    background-color: white;
+    width: 380px;
+    background-color: #fffbfb;
+}
+
+.btn {
+    all: unset;
+    padding: 0.5rem 1rem;
+    border-radius: 0.4rem;
+    background-color: #ffa458;
+    color: #fffbfb;
+    transition: all 0.2s ease-sin-out;
+    cursor: pointer;
+}
+
+.btn:hover {
+    opacity: 0.8;
 }
 
 .container,
 .home,
-.login-form {
+.user-info {
     display: flex;
     flex-direction: column;
 }
 
-.container {
+.container,
+.user-info {
     justify-content: center;
     align-items: center;
 }
 
+/* image */
+
 .image-wrapper {
     width: 100%;
     height: auto;
+    background-color: #ffa458;
 }
 
 .image-wrapper img {
     width: 100%;
-    height: 100%;
+    height: 10rem;
+    object-fit: contain;
 }
+
+/* heading */
 
 .heading {
     padding-top: 0.5rem;
 }
 
-.home,
-.login-form {
+/* home */
+
+.home {
     padding: 0.5rem;
+    gap: 0.5rem;
+    position: relative;
+    border-bottom: 2px solid #ffa458;
+}
+
+.home h3 {
+    align-self: center;
+}
+
+.home ul {
+    display: block;
+    list-style: none;
+}
+
+
+/* user-info */
+
+.user-info {
+    gap: 0.5rem;
+    padding-block: 1rem;
+}
+
+.btn.documentation:hover {
+    color: #fffbfb;
+}
+
+.buttons-container {
+    display: flex;
+    gap: 1rem;
+}
+
+/* form */
+
+.login-form {
+    width: 100%;
+    padding-inline: 0.5rem;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.2rem;
+    padding-block: 1rem;
+    width: 100%;
+}
+
+.form h2 {
+    text-align: center;
+    line-height: 1;
+}
+
+.form div {
+    margin-block: 0.4rem;
+    display: flex;
+    width: 80%;
+}
+
+.form label {
+    display: none;
+}
+
+.form div input {
+    padding: 0.2rem;
+    flex-grow: 1;
+    border: none;
+    background-color: #fffbfb;
+    border-bottom: 2px solid rgba(255, 164, 88, 0.3)
+}
+
+.form div input:focus {
+    border-bottom: 2px solid #ffa458;
+    outline: none
 }
