--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,7 +1,6 @@
-/* Reset */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-/* global css */
+/* Reset */
 html {
     font: 16px/1.5 'Roboto', sans-serif;
     box-sizing: border-box;
@@ -17,29 +16,31 @@ img {
     display: block;
 }
 
+
+/* Global CSS */
+body {
+    width: 380px;
+    background-color: #fffbfb;
+}
+
 a {
-    text-decoration: none;
     color: black;
     font-weight: 700;
+    text-decoration: none;
 }
 
 a:hover {
     color: #F08A5D;
 }
 
-body {
-    width: 380px;
-    background-color: #fffbfb;
-}
-
 .btn {
     all: unset;
+    cursor: pointer;
     padding: 0.5rem 1rem;
     border-radius: 0.4rem;
-    background-color: #ffa458;
     color: #fffbfb;
+    background-color: #ffa458;
     transition: all 0.2s ease-sin-out;
-    cursor: pointer;
 }
 
 .btn:hover {
@@ -59,7 +60,7 @@ body {
     align-items: center;
 }
 
-/* image */
+/* Image */
 .image-wrapper {
     width: 100%;
     height: auto;
@@ -72,16 +73,16 @@ body {
     object-fit: contain;
 }
 
-/* heading */
+/* Heading */
 .heading {
     padding-top: 0.5rem;
 }
 
-/* home */
+/* Home */
 .home {
+    position: relative;
     padding: 0.5rem;
     gap: 0.5rem;
-    position: relative;
     border-bottom: 2px solid #ffa458;
 }
 
@@ -95,7 +96,7 @@ body {
 }
 
 
-/* user-info */
+/* User info */
 .user-info {
     gap: 0.5rem;
     padding-block: 1rem;
@@ -110,26 +111,32 @@ body {
     gap: 1rem;
 }
 
-/* form */
+/* Form */
 .form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0.2rem;
-    padding-block: 1rem;
     width: 100%;
+    padding-block: 1rem;
 }
 
 .form h2 {
     text-align: center;
     line-height: 1;
+    margin-bottom: 0.75rem;
 }
 
 .form div {
-    margin-block: 0.4rem;
     display: flex;
+    flex-direction: column;
     width: 80%;
+    margin-block: 0.4rem;
+}
+
+.form div:last-of-type {
+    margin-bottom: 1rem;
 }
 
 .form label {
@@ -145,6 +152,20 @@ body {
 }
 
 .form div input:focus {
+    outline: none;
     border-bottom: 2px solid #ffa458;
-    outline: none
+}
+
+.server-error,
+.error {
+    display: none;
+    color: red;
+}
+
+.error {
+    margin: -0.15rem 0 -1rem 0.15rem;
+}
+
+.server-error {
+    margin: -0.8rem 0 -0.5rem 0;
 }
