--- a/extension/popup.css
+++ b/extension/popup.css
@@ -30,7 +30,8 @@ a {
 }
 
 a:hover {
-    color: #F08A5D;
+    color: #4f46e5;
+    opacity: 0.7;
 }
 
 .btn {
@@ -39,7 +40,7 @@ a:hover {
     padding: 0.5rem 1rem;
     border-radius: 0.4rem;
     color: #fffbfb;
-    background-color: #ffa458;
+    background-color: #4f46e5;
     transition: all 0.2s ease-sin-out;
 }
 
@@ -64,7 +65,7 @@ a:hover {
 .image-wrapper {
     width: 100%;
     height: auto;
-    background-color: #ffa458;
+    background-color: #4f46e5;
 }
 
 .image-wrapper img {
@@ -83,7 +84,7 @@ a:hover {
     position: relative;
     padding: 0.5rem;
     gap: 0.5rem;
-    border-bottom: 2px solid #ffa458;
+    border-bottom: 2px solid #4f46e5;
 }
 
 .home h3 {
@@ -148,12 +149,12 @@ a:hover {
     flex-grow: 1;
     border: none;
     background-color: #fffbfb;
-    border-bottom: 2px solid rgba(255, 164, 88, 0.3)
+    border-bottom: 2px solid rgba(79, 70, 229, 0.3)
 }
 
 .form div input:focus {
     outline: none;
-    border-bottom: 2px solid #ffa458;
+    border-bottom: 2px solid #4f46e5;
 }
 
 .server-error,
